# diffcp

./: .gitignore  .prettierignore  .prettierrc  DEV.md  README.md  astro.config.mjs  package-lock.json  package.json  release.config.js  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
python/: README.md  pyproject.toml
python/diffcp/: __init__.py  diff.py  ndjson.py  stream.py  zip.py
python/tests/: test_diff.py  test_e2e.py  test_stream.py
scripts/: version.js
src/: global.css
src/core/: carrier.ts  compress.ts  diff.ts  ndjson.ts  stream.ts  zip.ts
src/examples/: AppButton.tsx  AppFileBadge.tsx  AppInlineReference.tsx  AppMessage.tsx  AppStageBadge.tsx  AppSwitch.tsx  AppWebsiteBadge.tsx  ExampleText.tsx  exampleTextApi.ts  utils.ts
src/pages/: api.ts  index.astro
src/react/: useObjectStream.ts
tests/: diff.test.ts  diffCreate.test.ts  utils.ts
