[project]
name = "diffcp"
version = "0.0.0"
description = "Differential Context Protocol (DCP) implementation in Python"
readme = "README.md"
authors = [
    { name = "Matteo Scorcia", email = "matteo@axelered.com" },
    { name = "Borut Svara", email = "borut@axelered.com" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.13.3",
    "pydantic-core>=2.46.3",
    "fastapi>=0.136.1",
]

[project.urls]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diffcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle - style guide enforcement (PEP 8)
    "F",  # Pyflakes - logical errors and undefined names
    "I",  # isort - import sorting
    "B",  # flake8-bugbear - likely bugs and design issues
    "UP", # pyupgrade - modern Python patterns
]

ignore = ["B904"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
